--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lordicon/react": "^1.6.0",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "cloudinary": "^2.1.0",
+    "lord-icon-element": "^4.1.2",
+    "lottie-web": "^5.12.2",
+    "mongoose": "^8.3.0",
+    "next": "14.1.4",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
