--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "primereact": "^10.6.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
