--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lordicon/react": "^1.6.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.6.8",
     "cloudinary": "^2.1.0",
     "lord-icon-element": "^4.1.2",
