--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URI="mongodb+srv://hackgodsk112:DfjxDTfVhWHq1rjA@cluster0.xwau8wx.mongodb.
 NAME="dokm5lsnl"
 KEY="998866654954796"
 SECRET="qGJ-xlkeYflvqBYEs_I9TDT1ysg"
+
+NEXT_PUBLIC_EDITOR_KEY='kmikb04cex3awuzymo5z7qxe7fhz1wmbgeev63qu6o10w4v8'
