--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.6.8",
     "cloudinary": "^2.1.0",
+    "dompurify": "^3.1.6",
     "lord-icon-element": "^4.1.2",
     "lottie-web": "^5.12.2",
     "mongoose": "^8.3.0",
